# bashkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile
crates/bashkit/: Cargo.toml
crates/bashkit-bench/: Cargo.toml  README.md
crates/bashkit-bench/results/: bench-none-linux-x86_64-1773464548.json  bench-none-linux-x86_64-1773464548.md  bench-runsc-linux-x86_64-1776121540.json  bench-runsc-linux-x86_64-1776121540.md  criterion-parallel-(none)-linux-x86_64-1773469129.md
crates/bashkit-bench/scripts/: bashkit-js-runner.cjs  bashkit-py-runner.py  gbash-server-runner.py  justbash-inproc-runner.cjs
crates/bashkit-bench/src/: cases.rs  main.rs  runners.rs
crates/bashkit-cli/: Cargo.toml
crates/bashkit-cli/src/: interactive.rs  main.rs  mcp.rs
crates/bashkit-eval/: Cargo.toml
crates/bashkit-eval/data/: eval-tasks.jsonl
crates/bashkit-eval/data/scripting-tool/: discovery.jsonl  large-output.jsonl  many-tools.jsonl  paginated.jsonl
crates/bashkit-eval/results/: scripting-eval-baseline-gpt54-baseline-large-output-2026-03-13-220709.json  scripting-eval-baseline-gpt54-baseline-large-output-2026-03-13-220709.md  scripting-eval-baseline-gpt54-baseline-many-tools-2026-03-13-220723.json  scripting-eval-baseline-gpt54-baseline-many-tools-2026-03-13-220723.md  scripting-eval-baseline-gpt54-baseline-paginated-2026-03-13-220719.json  scripting-eval-baseline-gpt54-baseline-paginated-2026-03-13-220719.md  scripting-eval-baseline-openai-gpt-5.2-2026-03-14-062429.json  scripting-eval-baseline-openai-gpt-5.2-2026-03-14-062429.md  scripting-eval-baseline-openai-gpt-5.2-2026-03-14-062436.json  scripting-eval-baseline-openai-gpt-5.2-2026-03-14-062436.md  scripting-eval-baseline-openai-gpt-5.2-2026-03-14-062446.json  scripting-eval-baseline-openai-gpt-5.2-2026-03-14-062446.md  scripting-eval-scripted-anthropic-claude-sonnet-4-20250514-2026-03-24-003537.json  scripting-eval-scripted-anthropic-claude-sonnet-4-20250514-2026-03-24-003537.md  scripting-eval-scripted-gpt54-scripted-large-output-2026-03-13-220711.json  scripting-eval-scripted-gpt54-scripted-large-output-2026-03-13-220711.md  scripting-eval-scripted-gpt54-scripted-many-tools-2026-03-13-220724.json  scripting-eval-scripted-gpt54-scripted-many-tools-2026-03-13-220724.md  scripting-eval-scripted-gpt54-scripted-paginated-2026-03-13-220714.json  scripting-eval-scripted-gpt54-scripted-paginated-2026-03-13-220714.md  scripting-eval-scripted-openai-gpt-4o-2026-03-24-003610.json  scripting-eval-scripted-openai-gpt-4o-2026-03-24-003610.md  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062315.json  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062315.md  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062332.json  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062332.md  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062344.json  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062344.md  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062400.json  scripting-eval-scripted-openai-gpt-5.2-2026-03-14-062400.md
crates/bashkit-eval/src/: dataset.rs  lib.rs  main.rs  scorer.rs  scripting_agent.rs  scripting_dataset.rs  scripting_report.rs  scripting_runner.rs
crates/bashkit-js/: .gitignore  Cargo.toml  README.md  ai.ts  anthropic.ts  build.rs  index-header.d.ts  package-lock.json  package.json  tsconfig.json  wrapper.ts
crates/bashkit-js/__test__/: basic.spec.ts  builtins.spec.ts  control-flow.spec.ts  error-handling.spec.ts  integration.spec.ts  scripts.spec.ts  security.spec.ts  streaming-output.spec.ts  strings-and-quoting.spec.ts  tool-metadata.spec.ts  vfs.spec.ts
crates/bashkit-js/__test__/runtime-compat/: _setup.mjs  basics.test.mjs  builtins.test.mjs  control-flow.test.mjs  error-handling.test.mjs  filesystem.test.mjs  integration.test.mjs  scripts.test.mjs  security.test.mjs  streaming-output.test.mjs  tool-metadata.test.mjs  vfs.test.mjs
crates/bashkit-js/scripts/: smoke-test.sh
crates/bashkit-js/src/: lib.rs
crates/bashkit-python/: Cargo.toml  README.md
crates/bashkit-python/bashkit/: __init__.py  _bashkit.pyi
crates/bashkit-python/examples/: data_pipeline.py  fastapi_async_tool.py  langgraph_async_tool.py  llm_tool.py
crates/bashkit-python/src/: lib.rs
crates/bashkit-python/tests/: _bashkit_categories.py  _security_advanced.py  _security_core.py  test_ai_adapters.py  test_async_callbacks.py  test_bashkit.py  test_basic.py  test_builtins.py  test_control_flow.py  test_error_handling.py  test_fastapi_integration.py  test_integration.py  test_langgraph_integration.py  test_scripts.py  test_security.py  test_strings_and_quoting.py  test_tool_metadata.py  test_vfs.py
crates/bashkit/docs/: compatibility.md  credential-injection.md  custom_builtins.md  hooks.md  live_mounts.md  python.md  ssh.md  threat-model.md  typescript.md
crates/bashkit/examples/: python_external_functions.rs  scripted_tool.rs  typescript_external_functions.rs  typescript_scripts.rs
crates/bashkit/fuzz/: Cargo.toml
crates/bashkit/src/: credential.rs  error.rs  hooks.rs  lib.rs  limits.rs  snapshot.rs  tool.rs  tool_def.rs  trace.rs
crates/bashkit/tests/: awk_fuzz_scaffold_tests.rs  awk_newline_tests.rs  awk_pattern_tests.rs  awk_printf_expr_test.rs  awk_range_pattern_tests.rs  background_exec_tests.rs  bash_source_tests.rs  blackbox_security_tests.rs  cancellation_tests.rs  cmdsub_quote_test.rs  credential_injection_tests.rs  dev_null_tests.rs  find_multi_path_tests.rs  git_remote_security_tests.rs  git_security_tests.rs  issue_1175_test.rs  issue_853_test.rs  issue_872_test.rs  issue_875_test.rs  jq_fuzz_scaffold_tests.rs  logging_security_tests.rs  network_security_tests.rs  output_truncation_tests.rs  overlay_path_validation_tests.rs  proptest_differential.rs  realfs_tests.rs  security_audit_pocs.rs  set_e_and_or_tests.rs  skills_tests.rs  snapshot_tests.rs  spec_tests.rs  symlink_overlay_security_tests.rs  threat_model_tests.rs  typescript_integration_tests.rs  typescript_security_tests.rs  unicode_security_tests.rs  unset_function_tests.rs  urandom_tests.rs
(+266 files in other folders)
