# Bashkit - Awesomely fast virtual sandbox with bash and file system
# Part of the Everruns ecosystem
# See specs/ for design decisions

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.16"
edition = "2024"
license = "MIT"
authors = ["Everruns"]
repository = "https://github.com/everruns/bashkit"
description = "Awesomely fast virtual sandbox with bash and file system"
keywords = ["bash", "virtual", "ai", "agent", "everruns"]
categories = ["command-line-utilities", "parser-implementations"]

[workspace.dependencies]
# Async runtime
# Base features are WASM-compatible; crates needing more (rt-multi-thread, fs, net, process)
# add them in their own Cargo.toml or via [target.'cfg(...)'.dependencies].
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON processing (jq) - verified embeddable
jaq-core = "3.0"
jaq-std = "3.0"
jaq-json = "2.0"

# Text search (grep) - verified supports search_slice() for in-memory
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"

# HTTP client (for curl and API calls)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }

# Glob matching
globset = "0.4"

# Regex
regex = "1"

# Date/Time
chrono = "0.4"

# Compression
flate2 = "1"

# Base64 encoding
base64 = "0.22"

# Checksums (md5sum, sha256sum, etc.)
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"

# Ed25519 signing (bot-auth request signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"
insta = "1"

# Fault injection (security testing)
fail = "0.5"

# Property-based testing
proptest = "1"

# JSON Schema generation
schemars = "1"

# Logging/tracing
tracing = "0.1"
tower = { version = "0.5", features = ["util"] }

# SSH client (for ssh/scp/sftp builtins)
russh = "0.60"
russh-keys = "0.49"

# Serial test execution
serial_test = "3"

# Python bindings
pyo3 = { version = "0.28.2", features = ["extension-module", "generate-import-lib"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# JavaScript/Node.js bindings (NAPI-RS)
napi = { version = "3.0.0", default-features = false, features = ["napi6", "compat-mode", "tokio_rt"] }
napi-derive = "3.0.0"
napi-build = "2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
