# Benchmark tool for comparing bashkit, bash, and just-bash
# Goals: measure performance, start time, and error rates
# Usage: cargo run -p bashkit-bench -- [options]

[package]
name = "bashkit-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Benchmark tool for bashkit shell interpreter"

[[bin]]
name = "bashkit-bench"
path = "src/main.rs"

[dependencies]
bashkit = { path = "../bashkit", features = ["jq"] }
tokio = { workspace = true, features = ["rt-multi-thread", "process"] }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true

# Statistics
statrs = "0.18"

# Terminal output
colored = "3"
tabled = "0.20"
