# Bashkit CLI - Command line interface for bashkit
# Run bash scripts in a virtual environment

[package]
name = "bashkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command line interface for Bashkit virtual bash interpreter"
readme = "../../README.md"

[[bin]]
name = "bashkit"
path = "src/main.rs"
doc = false  # Disable to avoid collision with bashkit library docs

[features]
default = ["python"]
python = ["bashkit/python"]
realfs = ["bashkit/realfs"]
scripted_tool = ["bashkit/scripted_tool"]

[dependencies]
bashkit = { path = "../bashkit", version = "0.1.9", features = ["http_client", "git"] }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
