# Bashkit CLI - Command line interface for bashkit
# Run bash scripts in a virtual environment

[package]
name = "bashkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command line interface for Bashkit virtual bash interpreter"
readme = "../../README.md"

[[bin]]
name = "bashkit"
path = "src/main.rs"
doc = false  # Disable to avoid collision with bashkit library docs

[features]
default = ["python", "interactive"]
python = ["bashkit/python"]
realfs = ["bashkit/realfs"]
scripted_tool = ["bashkit/scripted_tool"]
interactive = ["dep:rustyline", "dep:terminal_size", "dep:signal-hook"]

[dependencies]
bashkit = { path = "../bashkit", version = "0.1.9", features = ["http_client", "git", "jq"] }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rustyline = { version = "18", optional = true }
terminal_size = { version = "0.4", optional = true }
signal-hook = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
