# Fuzz testing for Bashkit parser
# Run with: cargo +nightly fuzz run parser_fuzz
# See specs/006-threat-model.md for security context

[package]
name = "bashkit-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["rt"] }

[dependencies.bashkit]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lexer_fuzz"
path = "fuzz_targets/lexer_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "arithmetic_fuzz"
path = "fuzz_targets/arithmetic_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "glob_fuzz"
path = "fuzz_targets/glob_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jq_fuzz"
path = "fuzz_targets/jq_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "awk_fuzz"
path = "fuzz_targets/awk_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "printf_fuzz"
path = "fuzz_targets/printf_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "base64_fuzz"
path = "fuzz_targets/base64_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "envsubst_fuzz"
path = "fuzz_targets/envsubst_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sed_fuzz"
path = "fuzz_targets/sed_fuzz.rs"
test = false
doc = false
bench = false
